// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`全ルールの網羅 — 指摘の文面を固定する > placeholder で埋めた状態の指摘 > filled 1`] = `
{
  "annai": [
    "info|-|本店移転・役員変更は2週間以内の変更登記が必要です。あわせて税務署・都道府県税事務所・市区町村・年金事務所・労働基準監督署・ハローワーク・許認可官庁への届出も期限内に済ませてください。|会社法915条1項",
  ],
  "baibai": [
    "info|-|継続的取引の基本となる契約書は印紙税第7号文書に当たり、1通あたり4,000円の収入印紙が必要です（契約期間3か月以内かつ更新の定めがないものを除く）。電子契約なら不要です。|印紙税法（課税物件表第7号）",
  ],
  "chingin": [
    "info|-|常時10人以上の労働者を使用する事業場では、賃金規程も就業規則の一部として、過半数代表者の意見書を添えて所轄労働基準監督署長に届け出、労働者に周知する必要があります。|労働基準法89条・90条・106条",
  ],
  "chintai": [],
  "chuumon-uke": [
    "info|-|請負に関する注文請書は印紙税第2号文書として課税されます（1万円未満は非課税）。物品の売買のみなら原則不課税です。電子データで交付すれば課税文書に当たりません。|印紙税法（課税物件表第2号）",
  ],
  "hacchu": [
    "info|-|委託事業者は、給付の内容・代金の額・支払期日等を記載した発注書面を直ちに交付する義務を負います。取引書類は2年間保存してください。手形による代金の支払は禁止されています。|中小受託取引適正化法4条（2026年1月施行）",
  ],
  "harassment": [
    "info|-|規程の制定だけでは措置義務を果たしたことになりません。相談窓口の周知、担当者への対応手順の共有、相談記録の作成・保管まで整備してください。|労働施策総合推進法30条の2",
  ],
  "invoice": [
    "info|-|消費税額の端数処理は一の適格請求書につき税率ごとに1回です。行ごとに端数処理して積み上げる方法は認められません（本書式は区分ごとに1回だけ処理しています）。|消費税法57条の4",
  ],
  "kabunushi-meibo": [
    "warn|totalShares|記載された株式数の合計（90 株）が発行済株式の総数（100 株）と一致しません。|会社法121条",
  ],
  "kaijo": [],
  "kaiko-yokoku": [
    "info|-|業務上の傷病による休業期間及びその後30日間、産前産後の休業期間及びその後30日間は原則として解雇できません。該当しないか確認してください。|労働基準法19条",
  ],
  "kenshu": [],
  "kojin-itaku": [
    "info|-|契約を結んだだけでは委託先の監督義務を果たしたことになりません。委託先の選定基準、取扱状況の定期確認、再委託の承諾記録まで残してください。委託先で漏えいが起きた場合、報告義務を負うのは原則として委託元です。|個人情報保護法25条・26条",
  ],
  "mimoto": [],
  "naiyo": [
    "info|-|催告による時効の完成猶予は6か月です。その間に訴えの提起・支払督促の申立て等をしなければ時効は完成します。到達日を証明するため配達証明を併用してください。|民法150条",
  ],
  "nouhin": [],
  "privacy": [
    "info|-|公表しただけでは足りません。記載した利用目的・第三者提供・委託の運用が実態と一致しているか、年1回は突き合わせてください。実態と異なる公表はそれ自体がリスクです。|個人情報保護法17条・21条",
  ],
  "roudou": [],
  "ryoshu": [
    "info|-|紙で交付する受取書は、受取金額5万円以上で収入印紙が必要です（5万円以上100万円以下は200円）。消費税額を区分記載していれば税抜金額で判定できます。電子交付なら不要です。|印紙税法（課税物件表第17号）",
  ],
  "saburoku": [
    "info|-|協定を締結しただけでは時間外労働はさせられません。所轄労働基準監督署長への届出（様式第9号／特別条項は様式第9号の2）と、労働者への周知まで完了させてください。|労働基準法36条1項・106条",
  ],
  "shiharai": [
    "info|-|消費税額の端数処理は一の適格請求書につき税率ごとに1回です。行ごとに端数処理して積み上げる方法は認められません（本書式は区分ごとに1回だけ処理しています）。|消費税法57条の4",
    "info|-|仕入明細書が仕入税額控除の要件を満たすには、相手方の確認を受ける必要があります。「期限までに連絡がなければ確認があったものとする」旨の記載か、返信による確認を残してください。|消費税法30条9項3号",
  ],
  "shohi": [
    "info|-|紙で作成する場合は印紙税第1号の3文書として記載金額に応じた収入印紙が必要です。電子契約として交付すれば課税文書に当たりません。|印紙税法（課税物件表第1号の3）",
  ],
  "shunin": [
    "info|-|役員変更は原則として就任の日から2週間以内に本店の所在地で変更登記が必要です。就任承諾書のほか、本人確認証明書や印鑑証明書の添付が必要になる場合があります。|会社法915条1項・商業登記法54条",
  ],
  "taishoku-shomei": [
    "warn|-|本人が請求していない事項は記入できません。請求のなかった項目は空欄のままにするか、行ごと削除して交付してください。|労働基準法22条3項",
  ],
  "tokusoku": [
    "info|-|督促状の送付（催告）は6か月の完成猶予にとどまります。繰り返しても猶予は延長されません。回収の見込みが立たない場合は支払督促・少額訴訟への切替えを検討してください。|民法150条・民事訴訟法382条",
  ],
}
`;

exports[`全ルールの網羅 — 指摘の文面を固定する > 全欄が空の状態の指摘 > empty 1`] = `
{
  "annai": [
    "warn|company|「会社名」が未入力です。|-",
    "warn|rep|「代表者」が未入力です。|-",
    "warn|kind|「用件」が未入力です。|-",
    "warn|detail|「本文（用件の内容）」が未入力です。|-",
    "warn|effectDate|「実施日」が未入力です。|-",
    "warn|date|「発信日」が未入力です。|-",
    "info|-|本店移転・役員変更は2週間以内の変更登記が必要です。あわせて税務署・都道府県税事務所・市区町村・年金事務所・労働基準監督署・ハローワーク・許認可官庁への届出も期限内に済ませてください。|会社法915条1項",
  ],
  "baibai": [
    "warn|kou|「甲（買主）」が未入力です。|-",
    "warn|otsu|「乙（売主）」が未入力です。|-",
    "warn|goods|「対象商品」が未入力です。|-",
    "warn|date|「契約締結日」が未入力です。|-",
    "info|-|継続的取引の基本となる契約書は印紙税第7号文書に当たり、1通あたり4,000円の収入印紙が必要です（契約期間3か月以内かつ更新の定めがないものを除く）。電子契約なら不要です。|印紙税法（課税物件表第7号）",
  ],
  "chingin": [
    "warn|company|「会社名」が未入力です。|-",
    "warn|closing|「賃金の締切日」が未入力です。|-",
    "warn|payday|「賃金の支払日」が未入力です。|-",
    "warn|date|「制定日」が未入力です。|-",
    "info|-|常時10人以上の労働者を使用する事業場では、賃金規程も就業規則の一部として、過半数代表者の意見書を添えて所轄労働基準監督署長に届け出、労働者に周知する必要があります。|労働基準法89条・90条・106条",
  ],
  "chintai": [
    "warn|kou|「甲（貸主）」が未入力です。|-",
    "warn|otsu|「乙（借主）」が未入力です。|-",
    "warn|bukken|「物件の表示」が未入力です。|-",
    "warn|yoto|「使用目的」が未入力です。|-",
    "warn|rent|「賃料（月額・円）」が未入力です。|-",
    "warn|term|「契約期間」が未入力です。|-",
    "warn|date|「契約締結日」が未入力です。|-",
  ],
  "chuumon-uke": [
    "warn|to|「宛先（発注者）」が未入力です。|-",
    "warn|company|「自社名（受注者）」が未入力です。|-",
    "warn|no|「注文番号」が未入力です。|-",
    "warn|date|「請書発行日」が未入力です。|-",
    "warn|item1|「品目1」が未入力です。|-",
    "warn|amount1|「金額1（税抜）」が未入力です。|-",
    "info|-|請負に関する注文請書は印紙税第2号文書として課税されます（1万円未満は非課税）。物品の売買のみなら原則不課税です。電子データで交付すれば課税文書に当たりません。|印紙税法（課税物件表第2号）",
  ],
  "hacchu": [
    "warn|to|「受注者（中小受託事業者）」が未入力です。|-",
    "warn|company|「発注者（委託事業者）」が未入力です。|-",
    "warn|date|「発注日」が未入力です。|-",
    "warn|item1|「品目1（給付の内容）」が未入力です。|-",
    "warn|amount1|「金額1（税抜）」が未入力です。|-",
    "info|-|委託事業者は、給付の内容・代金の額・支払期日等を記載した発注書面を直ちに交付する義務を負います。取引書類は2年間保存してください。手形による代金の支払は禁止されています。|中小受託取引適正化法4条（2026年1月施行）",
  ],
  "harassment": [
    "warn|company|「会社名」が未入力です。|-",
    "warn|contact|「相談窓口」が未入力です。|-",
    "warn|person|「相談窓口担当者」が未入力です。|-",
    "warn|date|「制定日」が未入力です。|-",
    "info|-|規程の制定だけでは措置義務を果たしたことになりません。相談窓口の周知、担当者への対応手順の共有、相談記録の作成・保管まで整備してください。|労働施策総合推進法30条の2",
  ],
  "invoice": [
    "warn|to|「宛先（書類の交付を受ける者）」が未入力です。|-",
    "warn|company|「自社名（適格請求書発行事業者）」が未入力です。|-",
    "warn|regno|「登録番号（T+13桁）」が未入力です。|-",
    "warn|date|「発行日（取引年月日）」が未入力です。|-",
    "warn|-|いずれの品目にも税率区分が選ばれていません。明細が空のまま交付されます。|-",
    "info|-|消費税額の端数処理は一の適格請求書につき税率ごとに1回です。行ごとに端数処理して積み上げる方法は認められません（本書式は区分ごとに1回だけ処理しています）。|消費税法57条の4",
  ],
  "kabunushi-meibo": [
    "warn|company|「会社名」が未入力です。|-",
    "warn|baseDate|「基準日」が未入力です。|-",
    "warn|totalShares|「発行済株式の総数」が未入力です。|-",
    "warn|s1name|「株主1 氏名・名称」が未入力です。|-",
    "warn|s1shares|「株主1 株式数」が未入力です。|-",
    "warn|rep|「作成者」が未入力です。|-",
  ],
  "kaijo": [
    "warn|to|「宛先」が未入力です。|-",
    "warn|company|「自社名」が未入力です。|-",
    "warn|rep|「自社代表者」が未入力です。|-",
    "warn|contract|「契約の表示」が未入力です。|-",
    "warn|kind|「解除の種類」が未入力です。|-",
    "warn|breach|「債務不履行の内容」が未入力です。|-",
    "warn|date|「発信日」が未入力です。|-",
  ],
  "kaiko-yokoku": [
    "warn|company|「会社名」が未入力です。|-",
    "warn|rep|「代表者」が未入力です。|-",
    "warn|worker|「対象者 氏名」が未入力です。|-",
    "warn|noticeDate|「通知日」が未入力です。|-",
    "warn|dismissDate|「解雇の日」が未入力です。|-",
    "warn|reason|「解雇の理由（具体的に）」が未入力です。|-",
    "warn|reason|解雇の理由が空欄です。就業規則の該当条項と具体的な事実を記載しないと、解雇権濫用として無効を争われる余地が大きくなります。|労働契約法16条",
    "info|-|業務上の傷病による休業期間及びその後30日間、産前産後の休業期間及びその後30日間は原則として解雇できません。該当しないか確認してください。|労働基準法19条",
  ],
  "kenshu": [
    "warn|to|「宛先（受注者）」が未入力です。|-",
    "warn|company|「自社名（発注者）」が未入力です。|-",
    "warn|receiveDate|「納入（受領）日」が未入力です。|-",
    "warn|date|「検収日」が未入力です。|-",
    "warn|subject|「検収の対象」が未入力です。|-",
    "warn|payday|「代金の支払期日」が未入力です。|-",
  ],
  "kojin-itaku": [
    "warn|kou|「甲（委託元）」が未入力です。|-",
    "warn|otsu|「乙（委託先）」が未入力です。|-",
    "warn|base|「原契約の表示」が未入力です。|-",
    "warn|scope|「取扱いを委託する個人データの範囲」が未入力です。|-",
    "warn|purpose|「取扱いの目的」が未入力です。|-",
    "warn|date|「締結日」が未入力です。|-",
    "info|-|契約を結んだだけでは委託先の監督義務を果たしたことになりません。委託先の選定基準、取扱状況の定期確認、再委託の承諾記録まで残してください。委託先で漏えいが起きた場合、報告義務を負うのは原則として委託元です。|個人情報保護法25条・26条",
  ],
  "mimoto": [
    "fatal|limit|極度額（保証の上限額）が定められていません。このままでは身元保証契約そのものが無効です。|民法465条の2（個人根保証契約は極度額を定めなければ効力を生じない）",
    "warn|company|「会社名」が未入力です。|-",
    "warn|worker|「本人 氏名」が未入力です。|-",
    "warn|guarantor|「身元保証人 氏名」が未入力です。|-",
    "warn|limit|「極度額（保証の上限額・円）」が未入力です。|-",
    "warn|years|「保証期間（年・上限5年）」が未入力です。|-",
    "warn|date|「提出日」が未入力です。|-",
  ],
  "naiyo": [
    "warn|to|「宛先」が未入力です。|-",
    "warn|company|「自社名」が未入力です。|-",
    "warn|rep|「自社代表者」が未入力です。|-",
    "warn|contract|「契約の表示」が未入力です。|-",
    "warn|amount|「請求金額（円・税込）」が未入力です。|-",
    "warn|origDue|「当初の支払期日」が未入力です。|-",
    "warn|deadline|「本書到達後の支払期限」が未入力です。|-",
    "warn|date|「発信日」が未入力です。|-",
    "info|-|催告による時効の完成猶予は6か月です。その間に訴えの提起・支払督促の申立て等をしなければ時効は完成します。到達日を証明するため配達証明を併用してください。|民法150条",
  ],
  "nouhin": [
    "warn|to|「宛先」が未入力です。|-",
    "warn|company|「自社名」が未入力です。|-",
    "warn|date|「納品日」が未入力です。|-",
    "warn|item1|「品目1」が未入力です。|-",
    "warn|amount1|「金額1（税抜）」が未入力です。|-",
  ],
  "privacy": [
    "warn|company|「事業者名」が未入力です。|-",
    "warn|contact|「問い合わせ窓口」が未入力です。|-",
    "warn|date|「制定日」が未入力です。|-",
    "info|-|公表しただけでは足りません。記載した利用目的・第三者提供・委託の運用が実態と一致しているか、年1回は突き合わせてください。実態と異なる公表はそれ自体がリスクです。|個人情報保護法17条・21条",
  ],
  "roudou": [
    "fatal|placeRange|「就業場所の変更の範囲」が空欄です。2024年4月から全ての労働者への明示が必須になった項目で、欠けると労働条件明示義務違反になります。|労働基準法15条1項・同法施行規則5条",
    "fatal|dutyRange|「業務の変更の範囲」が空欄です。2024年4月から全ての労働者への明示が必須になった項目です。|労働基準法15条1項・同法施行規則5条",
    "warn|company|「事業場名称（使用者）」が未入力です。|-",
    "warn|worker|「労働者氏名」が未入力です。|-",
    "warn|start|「雇入れ日」が未入力です。|-",
    "warn|place|「就業の場所（雇入れ直後）」が未入力です。|-",
    "warn|placeRange|「就業場所の変更の範囲」が未入力です。|-",
    "warn|duty|「従事すべき業務（雇入れ直後）」が未入力です。|-",
    "warn|dutyRange|「業務の変更の範囲」が未入力です。|-",
    "warn|hours|「始業・終業時刻」が未入力です。|-",
    "warn|wage|「基本給（月額）」が未入力です。|-",
    "warn|date|「交付日」が未入力です。|-",
  ],
  "ryoshu": [
    "warn|to|「宛名」が未入力です。|-",
    "warn|amount|「金額（税込）」が未入力です。|-",
    "warn|date|「発行日」が未入力です。|-",
    "warn|company|「自社名」が未入力です。|-",
  ],
  "saburoku": [
    "warn|company|「事業場の名称」が未入力です。|-",
    "warn|jigyo|「事業の種類」が未入力です。|-",
    "warn|reason|「時間外労働をさせる必要のある具体的事由」が未入力です。|-",
    "warn|work|「業務の種類」が未入力です。|-",
    "warn|monthLimit|「延長できる時間（1か月）」が未入力です。|-",
    "warn|yearLimit|「延長できる時間（1年）」が未入力です。|-",
    "warn|start|「有効期間の起算日」が未入力です。|-",
    "warn|unionRep|「労働者代表 職名・氏名」が未入力です。|-",
    "warn|rep|「使用者 職名・氏名」が未入力です。|-",
    "warn|date|「協定締結日」が未入力です。|-",
    "info|-|協定を締結しただけでは時間外労働はさせられません。所轄労働基準監督署長への届出（様式第9号／特別条項は様式第9号の2）と、労働者への周知まで完了させてください。|労働基準法36条1項・106条",
  ],
  "shiharai": [
    "warn|to|「宛先（売手）」が未入力です。|-",
    "warn|toReg|「売手の登録番号」が未入力です。|-",
    "warn|company|「自社名（買手・作成者）」が未入力です。|-",
    "warn|date|「発行日」が未入力です。|-",
    "warn|period|「対象期間」が未入力です。|-",
    "warn|-|いずれの品目にも税率区分が選ばれていません。明細が空のまま交付されます。|-",
    "info|-|消費税額の端数処理は一の適格請求書につき税率ごとに1回です。行ごとに端数処理して積み上げる方法は認められません（本書式は区分ごとに1回だけ処理しています）。|消費税法57条の4",
    "info|-|仕入明細書が仕入税額控除の要件を満たすには、相手方の確認を受ける必要があります。「期限までに連絡がなければ確認があったものとする」旨の記載か、返信による確認を残してください。|消費税法30条9項3号",
  ],
  "shohi": [
    "warn|kou|「甲（貸主）」が未入力です。|-",
    "warn|otsu|「乙（借主）」が未入力です。|-",
    "warn|amount|「元本（円）」が未入力です。|-",
    "warn|rate|「利率（年・％）」が未入力です。|-",
    "warn|due|「最終返済期日」が未入力です。|-",
    "warn|date|「契約締結日」が未入力です。|-",
  ],
  "shunin": [
    "warn|company|「会社名」が未入力です。|-",
    "warn|position|「就任する役職」が未入力です。|-",
    "warn|name|「氏名」が未入力です。|-",
    "warn|addr|「住所」が未入力です。|-",
    "warn|startDate|「就任日」が未入力です。|-",
    "info|-|役員変更は原則として就任の日から2週間以内に本店の所在地で変更登記が必要です。就任承諾書のほか、本人確認証明書や印鑑証明書の添付が必要になる場合があります。|会社法915条1項・商業登記法54条",
  ],
  "taishoku-shomei": [
    "warn|company|「会社名」が未入力です。|-",
    "warn|rep|「代表者」が未入力です。|-",
    "warn|worker|「氏名」が未入力です。|-",
    "warn|period|「使用期間」が未入力です。|-",
    "warn|date|「発行日」が未入力です。|-",
  ],
  "tokusoku": [
    "warn|to|「宛先」が未入力です。|-",
    "warn|company|「自社名」が未入力です。|-",
    "warn|rep|「自社代表者」が未入力です。|-",
    "warn|amount|「未払金額（円・税込）」が未入力です。|-",
    "warn|origDue|「当初の支払期日」が未入力です。|-",
    "warn|newDue|「今回の支払期限」が未入力です。|-",
    "warn|account|「振込先口座」が未入力です。|-",
    "warn|date|「発信日」が未入力です。|-",
    "info|-|督促状の送付（催告）は6か月の完成猶予にとどまります。繰り返しても猶予は延長されません。回収の見込みが立たない場合は支払督促・少額訴訟への切替えを検討してください。|民法150条・民事訴訟法382条",
  ],
}
`;

exports[`分岐ごとの文面を丸ごと固定する > chintai — 敷金13か月分 1`] = `
[
  "warn|shikikin|敷金が賃料の12か月分を超えています。金額に誤りがないか確認してください。|-",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > chintai — 期間11か月 1`] = `
[
  "warn|term|契約期間が 11 か月です。期間を1年未満と定めた普通建物賃貸借は「期間の定めがない賃貸借」とみなされます。短期にするなら定期建物賃貸借にしてください。|借地借家法29条1項・38条",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > invoice — 任意税率Aが51% 1`] = `
[
  "fatal|rateA|任意税率A は 0〜50% の範囲で入力してください（現在 51）。|-",
  "info|-|消費税額の端数処理は一の適格請求書につき税率ごとに1回です。行ごとに端数処理して積み上げる方法は認められません（本書式は区分ごとに1回だけ処理しています）。|消費税法57条の4",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > invoice — 任意税率A未入力 1`] = `
[
  "fatal|rateA|任意税率A を使う品目がありますが、税率が未入力です。0% として計算され、消費税額が 0 になります。|-",
  "info|-|消費税額の端数処理は一の適格請求書につき税率ごとに1回です。行ごとに端数処理して積み上げる方法は認められません（本書式は区分ごとに1回だけ処理しています）。|消費税法57条の4",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > invoice — 任意税率Bが-1% 1`] = `
[
  "fatal|rateB|任意税率B は 0〜50% の範囲で入力してください（現在 -1）。|-",
  "info|-|消費税額の端数処理は一の適格請求書につき税率ごとに1回です。行ごとに端数処理して積み上げる方法は認められません（本書式は区分ごとに1回だけ処理しています）。|消費税法57条の4",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > invoice — 入力ありで使わない 1`] = `
[
  "warn|i1kind|品目1 に入力がありますが、税率区分が「（使わない）」のため請求書に載りません。区分を選ぶか、入力を消してください。|-",
  "info|-|消費税額の端数処理は一の適格請求書につき税率ごとに1回です。行ごとに端数処理して積み上げる方法は認められません（本書式は区分ごとに1回だけ処理しています）。|消費税法57条の4",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > invoice — 区分ありで単価が空 1`] = `
[
  "warn|i1price|品目1 の単価が未入力です。金額 0 円として計算されます。|-",
  "info|-|消費税額の端数処理は一の適格請求書につき税率ごとに1回です。行ごとに端数処理して積み上げる方法は認められません（本書式は区分ごとに1回だけ処理しています）。|消費税法57条の4",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > invoice — 登録番号の形式誤り 1`] = `
[
  "warn|regno|登録番号は「T」＋13桁の数字です。形式が違うと適格請求書の記載事項を満たさず、受け取った側が仕入税額控除を受けられません。|消費税法57条の4",
  "info|-|消費税額の端数処理は一の適格請求書につき税率ごとに1回です。行ごとに端数処理して積み上げる方法は認められません（本書式は区分ごとに1回だけ処理しています）。|消費税法57条の4",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > kabunushi-meibo — 合計が不足 1`] = `
[
  "warn|totalShares|記載された株式数の合計（80 株）が発行済株式の総数（100 株）と一致しません。|会社法121条",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > kabunushi-meibo — 合計が超過 1`] = `
[
  "fatal|s1shares|株主の保有株式数の合計が発行済株式の総数を超えています。|-",
  "warn|totalShares|記載された株式数の合計（160 株）が発行済株式の総数（100 株）と一致しません。|会社法121条",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > kaijo — 無催告解除 1`] = `
[
  "warn|kind|無催告解除ができるのは、履行不能・明確な履行拒絶・定期行為の時期経過など民法542条の要件に該当する場合か、契約に無催告解除の特約がある場合に限られます。要件を満たさない解除は無効となり、逆に債務不履行を問われます。|民法541条・542条",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > kaiko-yokoku — 29日・手当あり 1`] = `
[
  "warn|teateAmount|予告期間は 29 日です。不足する 1 日分以上の平均賃金を解雇予告手当として支払ってください。|労働基準法20条2項",
  "info|-|業務上の傷病による休業期間及びその後30日間、産前産後の休業期間及びその後30日間は原則として解雇できません。該当しないか確認してください。|労働基準法19条",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > kaiko-yokoku — 29日・手当なし 1`] = `
[
  "fatal|teate|予告期間が 29 日しかありません。30日前の予告に満たない場合は、不足日数分以上の平均賃金（解雇予告手当）の支払が必要です。|労働基準法20条",
  "info|-|業務上の傷病による休業期間及びその後30日間、産前産後の休業期間及びその後30日間は原則として解雇できません。該当しないか確認してください。|労働基準法19条",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > kaiko-yokoku — 理由が空 1`] = `
[
  "warn|reason|「解雇の理由（具体的に）」が未入力です。|-",
  "warn|reason|解雇の理由が空欄です。就業規則の該当条項と具体的な事実を記載しないと、解雇権濫用として無効を争われる余地が大きくなります。|労働契約法16条",
  "info|-|業務上の傷病による休業期間及びその後30日間、産前産後の休業期間及びその後30日間は原則として解雇できません。該当しないか確認してください。|労働基準法19条",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > kaiko-yokoku — 解雇日が通知日より前 1`] = `
[
  "warn|dismissDate|解雇の日が通知日より前になっています。|-",
  "info|-|業務上の傷病による休業期間及びその後30日間、産前産後の休業期間及びその後30日間は原則として解雇できません。該当しないか確認してください。|労働基準法19条",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > kenshu — 61日後 1`] = `
[
  "fatal|payday|支払期日が受領日から 61 日後になっています。支払期日は給付を受領した日から起算して60日以内に定める必要があります（起算日は検収日ではなく受領日）。|中小受託取引適正化法（2026年1月施行）・フリーランス法",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > mimoto — 期間6年 1`] = `
[
  "fatal|years|保証期間が 6 年になっています。5年を超える定めはできず、5年に短縮されます。|身元保証ニ関スル法律2条",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > mimoto — 極度額0 1`] = `
[
  "fatal|limit|極度額（保証の上限額）が定められていません。このままでは身元保証契約そのものが無効です。|民法465条の2（個人根保証契約は極度額を定めなければ効力を生じない）",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > mimoto — 極度額なし 1`] = `
[
  "fatal|limit|極度額（保証の上限額）が定められていません。このままでは身元保証契約そのものが無効です。|民法465条の2（個人根保証契約は極度額を定めなければ効力を生じない）",
  "warn|limit|「極度額（保証の上限額・円）」が未入力です。|-",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > nouhin — 登録番号の形式誤り 1`] = `
[
  "warn|reg|登録番号は「T」＋13桁の数字です。形式を確認してください。|消費税法57条の4",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > rinji-sokai — 出席が総数超過 1`] = `
[
  "fatal|presentShares|出席株主の議決権数（101）が議決権の総数（100）を超えています。|-",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > roudou — 就業場所の範囲が空 1`] = `
[
  "fatal|placeRange|「就業場所の変更の範囲」が空欄です。2024年4月から全ての労働者への明示が必須になった項目で、欠けると労働条件明示義務違反になります。|労働基準法15条1項・同法施行規則5条",
  "warn|placeRange|「就業場所の変更の範囲」が未入力です。|-",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > roudou — 業務の範囲が空 1`] = `
[
  "fatal|dutyRange|「業務の変更の範囲」が空欄です。2024年4月から全ての労働者への明示が必須になった項目です。|労働基準法15条1項・同法施行規則5条",
  "warn|dutyRange|「業務の変更の範囲」が未入力です。|-",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > ryoshu — 5万円ちょうど 1`] = `
[
  "info|-|紙で交付する受取書は、受取金額5万円以上で収入印紙が必要です（5万円以上100万円以下は200円）。消費税額を区分記載していれば税抜金額で判定できます。電子交付なら不要です。|印紙税法（課税物件表第17号）",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > saburoku — 対象者数が超過 1`] = `
[
  "warn|target|対象労働者数（11 人）が事業場の労働者数（10 人）を超えています。|-",
  "info|-|協定を締結しただけでは時間外労働はさせられません。所轄労働基準監督署長への届出（様式第9号／特別条項は様式第9号の2）と、労働者への周知まで完了させてください。|労働基準法36条1項・106条",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > saburoku — 年361時間 1`] = `
[
  "warn|yearLimit|1年の延長時間が 361 時間で、原則の限度時間360時間を超えています。特別条項による協定が必要です。|労働基準法36条4項",
  "info|-|協定を締結しただけでは時間外労働はさせられません。所轄労働基準監督署長への届出（様式第9号／特別条項は様式第9号の2）と、労働者への周知まで完了させてください。|労働基準法36条1項・106条",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > saburoku — 年721時間 1`] = `
[
  "fatal|yearLimit|1年の延長時間が 721 時間です。特別条項を締結しても1年720時間を超えることはできません。|労働基準法36条5項",
  "warn|yearLimit|1年の延長時間（721 時間）が、1か月の延長時間 × 12（540 時間）を上回っています。月の上限を守ると年の枠を使い切れません。|-",
  "info|-|協定を締結しただけでは時間外労働はさせられません。所轄労働基準監督署長への届出（様式第9号／特別条項は様式第9号の2）と、労働者への周知まで完了させてください。|労働基準法36条1項・106条",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > saburoku — 年が月×12超 1`] = `
[
  "warn|yearLimit|1年の延長時間が 361 時間で、原則の限度時間360時間を超えています。特別条項による協定が必要です。|労働基準法36条4項",
  "warn|yearLimit|1年の延長時間（361 時間）が、1か月の延長時間 × 12（120 時間）を上回っています。月の上限を守ると年の枠を使い切れません。|-",
  "info|-|協定を締結しただけでは時間外労働はさせられません。所轄労働基準監督署長への届出（様式第9号／特別条項は様式第9号の2）と、労働者への周知まで完了させてください。|労働基準法36条1項・106条",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > saburoku — 月46時間 1`] = `
[
  "warn|monthLimit|1か月の延長時間が 46 時間で、原則の限度時間45時間を超えています。特別条項（様式第9号の2）による協定が必要で、45時間を超えられるのは1年に6か月までです。|労働基準法36条4項・5項",
  "info|-|協定を締結しただけでは時間外労働はさせられません。所轄労働基準監督署長への届出（様式第9号／特別条項は様式第9号の2）と、労働者への周知まで完了させてください。|労働基準法36条1項・106条",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > saburoku — 月100時間 1`] = `
[
  "fatal|monthLimit|1か月の延長時間が 100 時間です。休日労働を含めて1か月100時間未満でなければならず、特別条項でもこの上限は超えられません。|労働基準法36条6項2号",
  "info|-|協定を締結しただけでは時間外労働はさせられません。所轄労働基準監督署長への届出（様式第9号／特別条項は様式第9号の2）と、労働者への周知まで完了させてください。|労働基準法36条1項・106条",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > shiharai — 相手方登録番号の形式誤り 1`] = `
[
  "warn|toReg|仕入明細書には「相手方（売手）の登録番号」の記載が必要です。「T」＋13桁の形式を確認してください。自社の番号ではありません。|消費税法30条9項3号",
  "info|-|消費税額の端数処理は一の適格請求書につき税率ごとに1回です。行ごとに端数処理して積み上げる方法は認められません（本書式は区分ごとに1回だけ処理しています）。|消費税法57条の4",
  "info|-|仕入明細書が仕入税額控除の要件を満たすには、相手方の確認を受ける必要があります。「期限までに連絡がなければ確認があったものとする」旨の記載か、返信による確認を残してください。|消費税法30条9項3号",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > shohi — 元本9万・21% 1`] = `
[
  "fatal|rate|元本 90,000 円に対する上限利率は年 20% です。年 21% とした場合、超過部分は無効になります。|利息制限法1条",
  "info|-|紙で作成する場合は印紙税第1号の3文書として記載金額に応じた収入印紙が必要です。電子契約として交付すれば課税文書に当たりません。|印紙税法（課税物件表第1号の3）",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > shohi — 元本50万・19% 1`] = `
[
  "fatal|rate|元本 500,000 円に対する上限利率は年 18% です。年 19% とした場合、超過部分は無効になります。|利息制限法1条",
  "info|-|紙で作成する場合は印紙税第1号の3文書として記載金額に応じた収入印紙が必要です。電子契約として交付すれば課税文書に当たりません。|印紙税法（課税物件表第1号の3）",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > shohi — 元本100万・16% 1`] = `
[
  "fatal|rate|元本 1,000,000 円に対する上限利率は年 15% です。年 16% とした場合、超過部分は無効になります。|利息制限法1条",
  "info|-|紙で作成する場合は印紙税第1号の3文書として記載金額に応じた収入印紙が必要です。電子契約として交付すれば課税文書に当たりません。|印紙税法（課税物件表第1号の3）",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > sokai — 出席が総数超過 1`] = `
[
  "fatal|presentShares|出席株主の議決権数（101）が議決権の総数（100）を超えています。|-",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > taishoku-shomei — 一部のみ請求 1`] = `
[
  "warn|-|本人が請求していない事項は記入できません。請求のなかった項目は空欄のままにするか、行ごと削除して交付してください。|労働基準法22条3項",
]
`;

exports[`分岐ごとの文面を丸ごと固定する > torishimari — 出席が総数超過 1`] = `
[
  "fatal|present|出席取締役数（6）が取締役総数（5）を超えています。|-",
]
`;
